# sp1-vector

./: .gitmodules  Cargo.toml  render.yaml
book/: deployment.md  reproducible-builds.md
contracts/: .env.example  command.sh  etherscan.json  foundry.toml  proxy.txt  remappings.txt
contracts/script/: Base.s.sol  Deploy.s.sol  Guardian.s.sol  UpdateVkey.s.sol  UpdateVkeySingle.s.sol
contracts/src/: SP1Vector.sol
contracts/src/interfaces/: ISP1Vector.sol
docker/: Dockerfile  docker-compose.yaml
elf/: riscv32im-succinct-zkvm-elf  sp1-vector-docker  vector-elf
primitives/: Cargo.toml
primitives/src/: header_range.rs  justification.rs  lib.rs  rotate.rs  types.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
query/: .env.example  DATABASE_SETUP.md  README.md  package-lock.json  package.json
query/app/api/: route.ts
query/app/api/justification/: route.ts
query/app/utils/: database.ts  deployments.json
script/: .env.example  Cargo.toml  UpdateVkeySingle.s.sol  build.rs
script/filtered_transactions/: 10-2024-0x44eB418A966ff47f5AF6f48AEa6Afde0bf193a8d.csv
script/src/: lib.rs  relay.rs
services/: .env.example  Cargo.toml  README.md
services/migrations/: 001_create_justifications_table.sql
services/src/: aws.rs  input.rs  lib.rs  postgres.rs  types.rs
