[package]
version = "0.1.0"
name = "services"
edition = "2021"

[[bin]]
name = "indexer"
path = "bin/indexer.rs"

[dependencies]
sp1-vector-primitives = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

dotenv = { workspace = true }
codec = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
avail-subxt = { workspace = true }
impl-serde = { workspace = true }

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }

[dev-dependencies]
test-case = "3.3.1"
